<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/featured_label"/>

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/apartment_label"/>

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/accessories_label"/>

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/shoes_label"/>

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tops_label"/>

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/bottoms_label"/>

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dresses_label"/>

	<View
		android:layout_width="56dp"
		android:layout_height="1dp"
		android:layout_margin="16dp"
		android:background="?android:attr/textColorPrimary"/>

	<android.support.design.button.MaterialButton
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/account_label"/>

</merge>