<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/loginPageBackgroundColor"
	tools:context=".application.ui.fragments.LoginFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:orientation="vertical"
		android:padding="24dp"
		android:paddingTop="16dp">

		<ImageView
			android:layout_width="64dp"
			android:layout_height="64dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="16dp"
			android:layout_marginTop="48dp"
			android:contentDescription="@string/content_description"
			android:tint="?android:attr/textColorPrimary"
			app:srcCompat="@drawable/img_logo"/>

		<TextView
			style="@style/TextAppearance.Shrine.Title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="132dp"
			android:text="@string/app_name"
			android:textAllCaps="true"
			android:textSize="16sp"/>

		<android.support.design.widget.TextInputLayout
			style="@style/Widget.Shrine.TextInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_username">

			<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/tv_password_input_text"
			style="@style/Widget.Shrine.TextInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_password"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/et_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"/>
		</android.support.design.widget.TextInputLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.design.button.MaterialButton
				android:id="@+id/bt_cancel"
				style="@style/Widget.Shrine.Button.TextButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="12dp"
				android:layout_toStartOf="@id/bt_next"
				android:text="@string/button_cancel"/>

			<android.support.design.button.MaterialButton
				android:id="@+id/bt_next"
				style="@style/Widget.Shrine.Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:text="@string/button_next"/>

		</RelativeLayout>

	</LinearLayout>
</ScrollView>
